# build-kg

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/build-kg/: SKILL.md
.cursor/rules/: build-kg.mdc
.github/workflows/: ci.yml
db/: docker-compose.yml  init.sql
docs/: architecture.html  architecture.md  docs.html  documentation.html  full-guide.html  guide.html  index.html  manifest-format.html  manifest-format.md  reference-chunk.html  reference-chunk.md  reference-crawl.html  reference-crawl.md  reference-load.html  reference-load.md  reference-parse.html  reference-parse.md  troubleshooting.html  troubleshooting.md  tutorial-quickstart.html  tutorial-quickstart.md  tutorial-singapore.html  tutorial-singapore.md  tutorial.html
examples/chunks/: example_chunk.json
examples/manifests/: canada-food.json  singapore-fb.json
release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md
site/: guide.html  index.html
src/build_kg/: __init__.py  chunk.py  clean.sh  config.py  crawl.py  domain.py  id_extractors.py  llm.py  load.py  parse.py  parse_batch.py  setup_graph.py  verify.py
src/build_kg/domains/: data-privacy.yaml  default.yaml  financial-aml.yaml  food-safety.yaml
tests/: test_config.py  test_domain.py  test_id_extractors.py  test_manifest.py
